remove dependency to com.sun* class